Pod_Network/emptydir.yaml
apiVersion: v1

kind: Pod

metadata: 
  name: podwithvolume
  namespace: abhi-ns

spec:
  containers:
  - name: volume-container
    image: nginx:latest

    ports:
    - containerPort: 80

    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: nginxindexfilepath

  volumes:
  - name: nginxindexfilepath
    emptyDir:
      sizeLimit: 1Gi
