Pod_Network/multipod.yaml
apiVersion: v1

kind: Pod

metadata: 
  name: airpod-multicontainer
  namespace: abhi-ns

spec:
   containers:
    - name: aircontainer1
      image: nginx:latest

      ports:
      - containerPort: 80
  
    - name: aircontainer2
      image: linuxserver/firefox

      ports:
      - containerPort: 3000
