Pod_Network/pod.yaml
apiVersion: v1

kind: Pod

metadata: 
  name: airpod
  namespace: abhi-ns

spec:
  containers:
  - name: air
    image: nginx:latest

    ports:
    - containerPort: 80
