Pod_Network/podtest.yaml
apiVersion: v1

kind: Pod

metadata: 
  name: podtest
  namespace: abhi-ns

spec:
   containers:
    - name: aircontainer1
      image: nginx:latest
    

      ports:
      - containerPort: 80
