Pod_Network/podwithlable.yaml
apiVersion: v1

kind: Pod

metadata:
  name: podwithlbl
  namespace: abhi-ns

  labels:
    application: nginx
  
spec:
  containers:
  - name: labelcontainer
    image: nginx:latest

    ports:
    - containerPort: 80
