Pod_Network/networkpolicy.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata: 
  name: mynetworkpolicy
  namespace: abhi-ns

spec:
  podSelector:
    matchLabels:
      application: nginx
